--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,3 +23,45 @@
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(52, 211, 153);
 }
+
+.pgr {
+  width: 100%;
+  position: relative;
+  margin: 0.5rem 0rem;
+}
+
+.progress-bar {
+  width: 16rem;
+  height: 3vh;
+  background-color: slategray;
+  border-radius: 10px;
+}
+
+.inner-progress {
+  position: absolute;
+  top: 0.25rem;
+  left: 0rem;
+  height: 2vh;
+  background-color: aqua;
+  border-radius: 10px;
+  animation: innerProgressBarAnimation 1s ease-in-out forwards;
+}
+
+.percentValue {
+  position: absolute;
+  bottom: -0.4rem;
+  right: -1.8rem;
+  /* right: 0; */
+  /* color: darkslategrey; */
+  color: white;
+  font-size: 1rem;
+}
+
+@keyframes innerProgressBarAnimation {
+  from {
+    width: 0;
+  }
+  to {
+    width: var(--percentQuesDone);
+  }
+}
